--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@ body {
   font-family: "Roboto", sans-serif;
   line-height: 1.6;
   margin: 0;
-  margin-top: 45px;
+  margin-top: 85px;
   padding: 20px;
   background-color: #f9fafb;
   color: #363636;
+  transform: scale(1.35);
 }
 
 .container {
@@ -83,7 +84,6 @@ hr {
 
 .contacts a {
   color: #838383;
-  text-decoration: none;
 }
 
 .contacts a:hover {
