--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,26 @@
 body {
   font-family: "Roboto", sans-serif;
+  font-weight:400;
   line-height: 1.6;
-  margin: 0;
-  margin-top: 85px;
-  padding: 20px;
+  
+  /* margin: 0; */
+  margin-top: 25px;
+
+  /* padding: 20px; */
   background-color: #f9fafb;
-  color: #363636;
-  transform: scale(1.35);
+  color: black;
+
+  /* transform: scale(1.55); this messes up the layout */
+  font-size: larger;
+
+  /* always show scroll bar that pages do not shift */
+  overflow: scroll;
 }
 
 .container {
-  max-width: 600px;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 20px;
+    /* padding: 30px; */
 }
 
 .header {
@@ -26,27 +34,23 @@ body {
   align-items: center;
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0;
-}
-
 .home-link {
   text-decoration: none;
-  color: #000000;
+  color: darkgreen;
   display: flex;
   align-items: center;
-  font-size: 0.57rem;
+  font-size: x-large;
+  font-weight: 600;
 }
 
 .home-link:hover {
-  color: #838383; /* Color on hover */
+  color: black; /* Color on hover */
 }
 
 .nav a {
   margin-left: 15px;
   text-decoration: none;
-  color: #838383; /* Default color for navigation links */
+  color: darkgreen; /* Default color for navigation links */
 }
 
 .nav a:hover {
@@ -54,7 +58,7 @@ h1 {
 }
 
 .nav {
-  font-size: 1.1rem;
+  font-size: x-large;
   color: #838383;
 }
 
@@ -63,29 +67,73 @@ p {
 }
 
 a {
-  color: #000; /* Default color for all links */
+  color: darkgreen; /* Default color for all links */
   text-decoration: underline;
 }
 
 a:hover {
-  color: #838383; /* Color on hover */
+  color: black; /* Color on hover */
 }
 
 hr {
   border: none;
-  border-top: 1px solid #ddd;
-  margin: 20px 0;
+  border-top: 2px solid darkgreen;
+  margin: 10px 0;
 }
 
 .contacts p {
   margin: 5px 0;
-  color: #838383;
+  color: grey;
 }
 
 .contacts a {
-  color: #838383;
+  color: darkgreen;
 }
 
 .contacts a:hover {
-  color: #000; /* Color on hover */
+  color: black; /* Color on hover */
+}
+
+
+/* image styling */
+.image-container{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+img{
+  width: 20%;
+  border: 2px solid darkgreen;
+  border-radius: 2.5%;
+}
+
+img:hover{
+  transform: scale(1.01);
+  transition: transform 0.5s;
+}
+
+.system-pic{
+  width: 37%;
+}
+
+.sim-pic{
+  width: 33.5%;
+}
+
+/* video styling */
+.video-container{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.video{
+  border: 2px solid darkgreen;
+  border-radius: 2.5%;
+}
+
+.video:hover{
+  transform: scale(1.01);
+  transition: transform 0.5s;
 }
