--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight:400;
   line-height: 1.6;
-  
+
   /* margin: 0; */
   margin-top: 25px;
 
@@ -81,19 +81,6 @@ hr {
   margin: 10px 0;
 }
 
-.contacts p {
-  margin: 5px 0;
-  color: grey;
-}
-
-.contacts a {
-  color: darkgreen;
-}
-
-.contacts a:hover {
-  color: black; /* Color on hover */
-}
-
 
 /* image styling */
 .image-container{
@@ -136,4 +123,24 @@ img:hover{
 .video:hover{
   transform: scale(1.01);
   transition: transform 0.5s;
+}
+
+/* footer styling */
+
+footer p {
+  margin: 5px 0;
+  color: grey;
+}
+
+footer a {
+  color: darkgreen;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: black; /* Color on hover */
+}
+
+footer{
+  margin-top: 20px;
 }
